[project]
name = "ingress-fieldplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client",
    "googlemaps",
    "matplotlib",
    "networkx",
    "numpy",
    "oauth2client",
    "ortools",
    "protobuf",
]

[project.scripts]
fieldplan = "fieldplan:main"