[project]
name = "ingress-fieldplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client",
    "googlemaps",
    "imageio>=2.37.2",
    "matplotlib",
    "networkx",
    "numpy",
    "oauth2client",
    "ortools",
    "protobuf",
    "pygifsicle>=1.1.0",
]

[project.scripts]
fieldplan = "fieldplan:main"
